Fix T101776: wrong logic for GLX setSwapInterval

Regression in 93e4b15767cf958d5a07ba6acce25438f244bf22.